@@ -1,0 +1,43 @@
+version = "[distributed with OCaml]"
+description = "compiler-libs support library"
+directory= "+compiler-libs"
+
+package "common" (
+  requires = "compiler-libs"
+  version = "[distributed with OCaml]"
+  description = "Common compiler routines"
+  archive(byte) = "ocamlcommon.cma"
+  archive(native) = "ocamlcommon.cmxa"
+)
+
+package "bytecomp" (
+  requires = "compiler-libs.common"
+  version = "[distributed with OCaml]"
+  description = "Bytecode compiler"
+  archive(byte) = "ocamlbytecomp.cma"
+  archive(native) = "ocamlbytecomp.cmxa"
+)
+
+package "optcomp" (
+  requires = "compiler-libs.common"
+  version = "[distributed with OCaml]"
+  description = "Native-code compiler"
+  archive(byte) = "ocamloptcomp.cma"
+  archive(native) = "ocamloptcomp.cmxa"
+  exists_if = "ocamloptcomp.cma"
+)
+
+package "toplevel" (
+  requires = "compiler-libs.bytecomp"
+  version = "[distributed with OCaml]"
+  description = "Toplevel interactions"
+  archive(byte) = "ocamltoplevel.cma"
+)
+
+package "native-toplevel" (
+  requires = "compiler-libs.optcomp dynlink"
+  version = "[distributed with OCaml]"
+  description = "Toplevel interactions"
+  archive(native) = "ocamltoplevel.cmxa"
+  exists_if = "ocamltoplevel.cmxa"
+)
