@@ -1,0 +1,7 @@
+description = "Ring buffer-based runtime tracing"
+version = "[distributed with OCaml]"
+directory = "+runtime_events"
+archive(byte) = "runtime_events.cma"
+archive(native) = "runtime_events.cmxa"
+plugin(byte) = "runtime_events.cma"
+plugin(native) = "runtime_events.cmxs"
